2014-01-13  Murray Stokely  <mstokely@google.com>

	* inst/unitTests/runit.int64.R (test.int64): Skip this test with a
	  warning if running on a machine with sizeof(long long) < 8.
	* vignettes/RProtoBuf-intro.Rnw (subsection{64-bit integer
	  issues}): Hide 64-bit field accesses with if conditional to
	  avoid running code that won't work on platforms without 64-bit
	  long longs.

2014-01-09  Murray Stokely  <mstokely@google.com>

	* R/read.R: Add a logical argument 'partial' to readASCII that
	  accepts uninitialized message fragments.
	* src/wrapper_Descriptor.cpp (rprotobuf): Idem
	* inst/unitTests/runit.addressbook.R (test.ascii): Add tests for above.

2014-01-04  Murray Stokely  <mstokely@google.com>

	* R/wrapper_CodedInputStream.R: Accept numeric size arguments for
	  ReadRaw and ReadString to make this more user friendly for
	  interactive use by calling as.integer() as needed.
	* R/00classes.R (P): Add missing object prameters in
	  ZeroCopyInputStream calls to ReadRaw and ReadString.
	* inst/unitTests/data/encoding.proto: Add example messages used in
	  the encoding documentation.
	* inst/unitTests/runit.serialize.R (test.encoding): Add tests
	  verifying the exact byte serialization as described in the
	  encoding documentation.
	  (test.arrayinputstream): Add new test of ArrayInputStreams.
	* src/wrapper_ZeroCopyInputStream.cpp (rprotobuf): Add
	  BEGIN/END_RCPP macros to gracefully catch exceptions and return
	  them as R language errors.
	* src/streams.cpp (rprotobuf): Idem.
	* man/ArrayInputStream-class.Rd: Add some examples of using
	  ArrayInputStream.

2014-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* src: Deprecate files SocketCopyingInputStream.{cpp,h}, sisocks.h as
	the current RProtoBuf design does not provide networking capabilities

2013-12-31  Murray Stokely  <mstokely@google.com>

	* src/wrapper_Message.cpp: Fix type coercion bug in add() method
	  for uint32s and add a missing break statement that erroneously